// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BuildApi should build a response with specific properties: buildResponse 1`] = `
{
  "appResponses": [
    {
      "callback": [Function],
      "type": "get",
      "url": "/hello/world/",
    },
  ],
  "routesLoaded": true,
}
`;

exports[`BuildApi should build specific headers: buildRequestHeaders.request.headers 1`] = `
{
  "Access-Control-Allow-Credentials": true,
  "Access-Control-Allow-Methods": "GET, PUT, POST, DELETE, HEAD, OPTIONS, PATCH",
  "Access-Control-Allow-Origin": "*",
}
`;

exports[`BuildApi should build specific headers: buildRequestHeaders.request.preflight 1`] = `
{
  "Access-Control-Allow-Credentials": true,
  "Access-Control-Allow-Headers": "x-test-header",
  "Access-Control-Allow-Methods": "GET, PUT, POST, DELETE, HEAD, OPTIONS, PATCH",
  "Access-Control-Allow-Origin": "*",
  "access-control-request-headers": "x-test-header",
}
`;
